# PyEtalon

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
PyEtalon/: custom_material_data.py  etalon.py  plotting.py  tmm.py
docs/: api.md  index.md
tests/: test_etalon.py  test_tmm.py
