[project]
name = "pyetalon"
version = "0.1.0"
description = "PyEtalon simulates the physics of Fabry-Perot etalons."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pyindexrepo>=0.1.16",
    "scipy-stubs==1.16.3.0",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "pytest>=9.0.1",
]

# add .venv to excluded directories for coverage
[tool.coverage.report]
omit = [
    ".venv/*",
    "docs/*"
]
