[project]
name = "pyetalon"
version = "0.1.3"
description = "PyEtalon simulates the physics of Fabry-Perot etalons."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pyindexrepo>=0.1.16",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.10.2",
]

cuda13 = [
    "jax[cuda13]>=0.10.2",
]
[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "deptry>=0.25.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.6",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

# add .venv to excluded directories for coverage
[tool.coverage.report]
omit = [
    ".venv/*",
    "docs/*"
]
